# contiki-otap

./: .gitignore  .gitmodules  create_diagrams.py  create_diagrams_from_pcap.py  create_pcap.py  create_pcap.py.bak  myrpl  sensniff.py  use_data_evaluation.py
Logs/: loglistener_grid_normal_50:47.txt  loglistener_half_grid_myrpl_53:38.txt  loglistener_normal_grid_15min_1.txt  skript.py
OTAP/: Makefile  ausgabe.txt  ausgabe1.txt  gateway.c  grid_6060_nobroadcast.txt  grid_6060txt  grid_65100.txt  grid_8080.txt  loglistener.txt  node_noupdate.c  node_update.c  rtt.py  rtt_update.py  worstcase_8080.txt
deluge/: ReadMe.txt
diff/package-creator/: CMakeLists.txt  Makefile  creator-fastlz.c  creator-xor.c  creator.c  hex2header.sh  sky2bin.sh
example/: Makefile  gateway_skeleton.c  node_skeleton.c  sink_skeleton.c
gateway/: Makefile  gateway.c
mynormal/: Makefile  grid_normal.csc  testbed_half_grid_normal.csc  udp-client-pressure.c  udp-client-pressure.sky  udp-client-rain.sky  udp-client-temp.sky  udp-client-video.c  udp-client-video.sky  udp-client-wind.c  udp-client-wind.sky  udp-server.c  udp-server.sky
myrpl/: Makefile  loglistener.txt  loglistener_custom.txt  loglistener_custom2.txt  loglistener_normal.txt  myrpl_conf.h  project-conf.h  skript.py  testbed.csc  testbed_half_grid_myrpl.csc  udp-client-pressure.c  udp-client-pressure.sky  udp-client-rain.c  udp-client-temp.c  udp-client-temp.sky  udp-client-video.c  udp-client-video.sky  udp-client-wind.c  udp-server.c  udp-server.sky
node/: Makefile  compression.h  config.h  dedicated_sniffer.c  fs-dummy.h  (+7 more)
(+122 files in other folders)
